--- a/src/locales/zh-CN.yml
+++ b/src/locales/zh-CN.yml
@@ -32,6 +32,7 @@ commands:
       create-success: 日程已创建，编号为 {0}。
       list-empty: 当前没有等待执行的日程。
       command-expected: 请输入要执行的指令。
+      command-invalid: 输入的指令不存在。
       date-invalid: 请输入合法的日期。
       date-invalid-suggestion: 请输入合法的日期。你要输入的是不是 {0}s？
       date-expected: 请输入执行时间。
